# JoltGym

./: .gitignore  404.html  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: cpp-build.yml  docs.yml  python-tests.yml
cmake/: FetchImGui.cmake  FetchJolt.cmake  FetchSDL2.cmake  FetchTinyXML2.cmake  FetchVMA.cmake  FetchVkBootstrap.cmake
cpp/architecture/: index.html
cpp/bindings/: index.html
cpp/core/: index.html
cpp/mjcf/: index.html
cpp/renderer/: index.html
demos/: index.html
demos/recording/: index.html
demos/training/: index.html
docs/: index.md  performance.md
docs/cpp/: architecture.md  bindings.md  core.md  mjcf.md  renderer.md
docs/demos/: benchmark.md  index.md  recording.md  training.md
docs/getting-started/: installation.md  quickstart.md
docs/python/: api-reference.md  environments.md  vectorized.md
examples/: benchmark.py  demo_halfcheetah.py  demo_vectorized.py  record_humanoid.py  record_race.py  record_video.py  train_humanoid.py  train_multiagent.py  train_ppo.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
performance/: index.html
python/api-reference/: index.html
python/environments/: index.html
python/joltgym/: __init__.py
python/joltgym/assets/: half_cheetah.xml
python/joltgym/envs/: __init__.py  cheetah_race_v0.py  half_cheetah_v0.py  humanoid_v0.py  registration.py
python/joltgym/vector/: __init__.py  jolt_vector_env.py
python/vectorized/: index.html
search/: search_index.json
src/bindings/: CMakeLists.txt  Makefile  bind_env.cpp  bind_humanoid.cpp  bind_multi_agent.cpp  bind_renderer.cpp  bind_state.cpp  bind_world.cpp  cmake_install.cmake  module.cpp  multi_agent_env.cpp  multi_agent_env.h  world_pool.cpp  world_pool.h
src/core/: CMakeLists.txt  Makefile  articulation.cpp  articulation.h  body_registry.cpp  body_registry.h  cmake_install.cmake  collision_layers.cpp  collision_layers.h  joltgym_core.cpp  joltgym_core.h  motor_controller.cpp  motor_controller.h  physics_world.cpp  physics_world.h  state_extractor.cpp  state_extractor.h
src/mjcf/: CMakeLists.txt  Makefile  cmake_install.cmake  mjcf_compiler.cpp  mjcf_compiler.h  mjcf_defaults.cpp  mjcf_defaults.h  mjcf_model.cpp  mjcf_model.h  mjcf_parser.cpp  mjcf_parser.h  mjcf_to_jolt.cpp  mjcf_to_jolt.h
src/renderer/: CMakeLists.txt  Makefile  camera.cpp  camera.h  cmake_install.cmake  imgui_layer.cpp  imgui_layer.h  mesh_primitives.cpp  mesh_primitives.h  offscreen_renderer.cpp  offscreen_renderer.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  scene_sync.cpp  scene_sync.h  swapchain_renderer.cpp  swapchain_renderer.h  vulkan_context.cpp  vulkan_context.h
src/shaders/: CMakeLists.txt  Makefile  cmake_install.cmake  embed_spirv.cmake  phong.frag  phong.vert
tests/cpp/: CMakeLists.txt  test_basic.cpp
tests/python/: test_half_cheetah.py
