[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "joltgym"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["gymnasium>=0.29", "numpy>=1.24"]
description = "MuJoCo-compatible physics simulation for RL, built on Jolt Physics with Vulkan rendering"

[project.optional-dependencies]
dev = ["pytest", "mujoco"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DJOLTGYM_BUILD_PYTHON=ON", "-DJOLTGYM_BUILD_TESTS=OFF"]
wheel.packages = ["python/joltgym"]
install.components = ["python"]

# Renderer auto-detected: built when Vulkan SDK + glslc are available.
# To force: pip install -e . -C cmake.define.JOLTGYM_BUILD_RENDERER=ON
